Prod/src/objects/ObjectFieldLock__mdt.object
<CustomObject>
    <fields>
        <fullName>Always_Allow_Permission__c</fullName>
        <label>Always Allow Permission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Always_Editable_Fields__c</fullName>
        <label>Always Editable Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDW_Freeze_Field__c</fullName>
        <inlineHelpText>This field will be used to determine if EDW is frozen or not.</inlineHelpText>
        <label>EDW Freeze Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclude_User_IDs__c</fullName>
        <inlineHelpText>Case safe id for users who will be excluded from locking until EDW freeze</inlineHelpText>
        <label>Exclude User IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lockable_Fields__c</fullName>
        <inlineHelpText>Comma separated fields</inlineHelpText>
        <label>Lockable Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locked_Field__c</fullName>
        <inlineHelpText>This field will be used to determine if record is locked or not. This field should be checkbox</inlineHelpText>
        <label>Locked Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Never_Editable_Fields__c</fullName>
        <inlineHelpText>Comma Separated fields api name</inlineHelpText>
        <label>Never Editable Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>OpportunityLineItem</fullName>
                </value>
                <value>
                    <fullName>CameleonCPQ__Quote__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity_Role_Split__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Fields__c</fullName>
        <label>Other Fields</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Editable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Special_Permissions__c</fullName>
        <inlineHelpText>Comma separated permissions from user special permission field who can edit these fields</inlineHelpText>
        <label>User Special Permissions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Was_Record_Locked_Field__c</fullName>
        <inlineHelpText>This field will be used to determine if record was ever locked.</inlineHelpText>
        <label>Was Record Locked Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ObjectFieldLock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Is_Active__c</columns>
        <columns>Object_Name__c</columns>
        <columns>Other_Fields__c</columns>
        <columns>User_Special_Permissions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>ObjectFieldLocks</pluralLabel>
</CustomObject>